complete post related to using sigmajs to show finite element mesh in HTML

--- a/posts/tech/2014-2-10-用sigma.js在网页展示二维有限元网格.md
+++ b/posts/tech/2014-2-10-用sigma.js在网页展示二维有限元网格.md
@@ -82,8 +82,165 @@ HTML
     </body>
     </html>
 
-将上述json文件保存成mesh.json, HTML文件保存成index.html,打开即可看到如[下图](https://raw.github.com/polariszz/blog/master/img/sigmajs/sigmajs_3_nodes.png)所示的效果。
-
+将上述json文件保存成mesh.json, HTML文件保存成index.html,打开即可看到如[下图](https://raw.github.com/polariszz/blog/master/img/sigmajs/sigmajs_3_nodes.png?raw=true)所示的效果。
 ![下图](https://raw.github.com/polariszz/blog/master/img/sigmajs/sigmajs_3_nodes.png)
 
-__看看效果__
+于是，只需把现有的网格文件按格式导出一个some_mesh.json，在html中就能有效地显示出来。
+
+### 网格导出脚本实现
+
+既然现在学nodejs，不妨就用nodejs写一个网格文件的导出脚本。
+
+现有网格文件的格式如下：
+
+    //pt_mesh.txt
+    4 #the total node number
+    1 0 0
+    2 1 0
+    3 0 1
+    4 1 1
+
+    //ele_mesh.txt
+    1 #the total element number
+    1 1 2 3 4
+
+我们只需全局定义一个JS的Object，`Object.nodes` 和 `Object.edges`分别按以上json文件的格式进行存储，然后再调用`JSON.stringify(Object)`输出即可。其中文件的操作部分用nodejs的fs模块，异步事件的调用需要用到nodejs的when模块。
+
+nodejs和其他脚本语言的不同在于nodejs是事件驱动的，正是这个特点ajax等大量异步请求工具的出现使浏览器有了更好的用户体验。而恰恰又是这个特点，nodejs虽然有不错的计算性能，但它不是很适合计算。
+
+在本例中，主要需要做三件事：
+1. 读节点文件(pt_mesh.txt)
+2. 读单元文件(ele_mesh.txt)
+3. 输出json文件(mesh.json)
+
+而下面的代码:
+
+    readPtFile("pt_mesh.txt");
+    readEleFile("ele_mesh.txt");
+    outputJsonFile("mesh.json");
+
+是无法满足需要的，因为三个操作均需要文件IO操作，而涉及文件IO的操作在nodejs中均为异步操作。我们不能保证第三步开始做时前两步已经完成，于是需要用到[when.js](https://github.com/cujojs/when)。
+
+when.js的用法如下例所示：
+
+    function doSomeWork() {
+        //声明一个defer变量
+        var defer = when.defer();
+        readFile(ptOrEleFile, function(err, data) {
+            if ( err ) {
+                defer.reject(err);
+                return;
+            }
+            //read data and put it into global object mesh
+            doSomeOtherWork();
+            //调用resolve()之后才能继续执行以后的任务
+            defer.resolve();
+        });
+        //promise 有then,otherwise等方法，其执行都在resolve()之后完成。
+        return defer.promise;
+    }
+
+`doSomeWork()`写完后，同样完成`doOtherWork()`和`doLastWork()`，就可以按如下链式方法进行调用：
+
+    doSomeWork().then(function() {
+        return doOtherWork();
+    }).then(function(){
+        return doLastWork();
+    });
+
+于是有了以上基础，可以整理出如下核心代码:
+
+    //meshToJson.js
+    var fs = require('fs');
+    var when = require('when');
+
+    function readAndProcessLine( filename, processLine) {
+        var defer = when.defer();
+        fs.readFile(filename, 'utf8', function(err, data) {
+            if (err) {
+                console.log(err);
+                return defer.reject(err);
+            }
+            console.log('Reading file', filename);
+            var lines = data.split('\n');
+            lines.forEach(function(line, seq) {
+                if ( !seq ){
+                    return;
+                }
+                processLine(line, seq);
+            });
+            defer.resolve();
+        });
+        return defer.promise;
+    }
+
+    var mesh_cube = {nodes:[], edges:[]};
+    var temp_edges = [];
+    readAndProcessLine("./pt_cube.txt", function(line, seq) {
+        var id = 'n' + seq,
+            ts = line.split(/\s/),
+            x = Math.round(ts[1] * 100),
+            y = Math.round(ts[2] * 100);
+        if ( isNaN(x)  || isNaN(y) )
+            return;
+        mesh_cube.nodes.push( {
+            id : id,
+            x : x,
+            y : y
+        });
+    }).then( function() {
+        return readAndProcessLine("./mesh_cube.txt", function(line, seq) {
+            var ele = line.split(/\s/);
+            var shouldReturn = false;
+            [ele[1], ele[2], ele[3], ele[4]].forEach(function(t) {
+                if (isNaN(t))
+                    shouldReturn = true;
+            });
+            if( shouldReturn )
+                return;
+            function process(a, b) {
+                //if (parseInt(a) < parseInt(b))
+                {
+                    if ( a > b ) {
+                        var c = a; a = b; b = c;
+                    }
+                    if ( ~temp_edges.indexOf(JSON.stringify([a, b])) ) {
+                        return;
+                    } else {
+                        temp_edges.push(JSON.stringify([a, b]));
+                    }
+                    mesh_cube.edges.push({
+                        id: 'e' + mesh_cube.edges.length,
+                        source: 'n' + a,
+                        target: 'n' + b
+                    });
+                }
+            }
+            [
+                [ele[1], ele[2]],
+                [ele[2], ele[3]],
+                [ele[3], ele[4]],
+                [ele[4], ele[1]]
+            ]
+                .forEach(function(edge) {
+                    process(edge[0], edge[1]);
+                });
+        });
+    }).then(function() {
+        delete temp_edges;
+        console.log(mesh_cube.edges.length);
+        fs.writeFile('./mesh.json', JSON.stringify(mesh_cube, null, 4), function(err) {
+            if (err) {
+                console.log(err);
+            }
+            console.log('./mesh.json is written');
+        });
+    });
+
+在终端调用`node meshToJson.js`即可输出与sigma.js示例中格式完成一样的mesh.json文件。
+
+### 效果
+
+在index.html中网格文件的名字作相应的更改，在浏览器中打开(这里不能直接打开，需要建立一个迷你的Server来host我们的index.html文件，因为sigmajs需要一些http请求，而file:///path/to/my/file.html 并不支持这些请求），打开后的效果图如图所示：
+
+![sigmajs_mesh](https://raw.github.com/polariszz/blog/master/img/sigmajs/sigmajs_mesh.png?raw=true)
